# AI-QA-Assistant

./: .env.example  .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS
agent/: .env.example  .gitignore  AGENTS.md  README.md  app.py  pytest.ini
agent/docs/: API_CONTRACT.md  agent_layer_design.md  development_guide.md  division_of_work.md  four_week_plan.md  integration_branch_guide.md  integration_record.md  interface_contract.md  q1_requirements.md  test_cases.md  tool_layer_interface.md  week3_report.md
agent/mock/: mock_chat_requests.json  mock_llm_answers.json  mock_retrieval_results.json
agent/scripts/: check_contract.py  run_mock_demo.py
agent/tool_layer/: __init__.py  search_tool.py
data-persistence/: README.md
docs/: 数据处理管线详解.md
models/: __init__.py  document.py
parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  registry.py
pipeline/: __init__.py  chunker.py  embedder.py  process.py
retrieval/: __init__.py  bm25_index.py
scripts/: gen_test_doc.py
src/: App.vue  style.css
src/api/: agentApi.js  mockAgent.js
src/components/: ChatInput.vue  ChatMessage.vue  ChatWindow.vue  CitationList.vue  UserMenu.vue
src/composables/: useChat.js  useChatActions.ts  useChats.ts  useMockChat.ts
src/layouts/: default.vue
src/mock/: errorMap.ts  mockAgent.ts  types.ts
src/pages/: index.vue
src/utils/: errorMap.js
storage/: milvus_store.py
toolset/: .gitmessage.txt  DEVELOPMENT_RULES.md  README.md
web/: .gitignore  index.html  package.json
(+46 files in other folders)
