[project]
name = "ragent"
version = "0.1.0"
description = "RAGent - 企业知识库问答系统"
requires-python = ">=3.11"
dependencies = [
    "pymilvus>=2.3.7",
    "pytest>=8.1.1",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openai>=1.30.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "pydantic>=2.7.0",
    "flask>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
